[gd_scene load_steps=19 format=3 uid="uid://c4ffy2ihhl0s2"]

[ext_resource type="Script" path="res://src/ui/ui.gd" id="1_nlrv2"]
[ext_resource type="Texture2D" uid="uid://f5erhq5j502x" path="res://assets/sprites/ui/damage1.png" id="2_ce1ua"]
[ext_resource type="Texture2D" uid="uid://denb8d8bd2nuf" path="res://assets/sprites/ui/damage2.png" id="3_fq08q"]
[ext_resource type="Texture2D" uid="uid://chp3701n84ov2" path="res://assets/sprites/ui/damage3.png" id="4_ae1f5"]
[ext_resource type="Texture2D" uid="uid://cnjfqhhop161g" path="res://assets/sprites/ui/damage4.png" id="5_bvfud"]
[ext_resource type="Texture2D" uid="uid://baxh3886eo753" path="res://assets/sprites/ui/damage5.png" id="6_xwhx4"]
[ext_resource type="PackedScene" uid="uid://b3ibyshlvp3wi" path="res://src/dialogues/text_box.tscn" id="7_jmgqw"]
[ext_resource type="Texture2D" uid="uid://cbo6uxx0kuo7p" path="res://assets/sprites/throwables/spear.png" id="8_sbj7u"]
[ext_resource type="Texture2D" uid="uid://md4b4rduxwaf" path="res://assets/sprites/throwables/bronze.png" id="9_7ow6w"]
[ext_resource type="Texture2D" uid="uid://oc2hf7ojfhde" path="res://assets/sprites/throwables/copper.png" id="10_avsow"]
[ext_resource type="Texture2D" uid="uid://dlbegmst44h3y" path="res://assets/sprites/throwables/stone.png" id="11_srjus"]
[ext_resource type="Texture2D" uid="uid://mq76ytsr80u3" path="res://assets/obrazy/poczatek.jpg" id="11_y1n2w"]
[ext_resource type="Texture2D" uid="uid://bus5ja7gxn0b3" path="res://assets/obrazy/zakonczenia.jpg" id="12_w76vi"]
[ext_resource type="Texture2D" uid="uid://dwmy2n4rdamgd" path="res://assets/obrazy/wejscie_w_konar.jpg" id="13_5lofl"]
[ext_resource type="Texture2D" uid="uid://b76h3b8jsl6bs" path="res://assets/obrazy/zakonczenia_wedrowiec.jpg" id="14_062ri"]
[ext_resource type="Texture2D" uid="uid://balhqtiyotq74" path="res://assets/obrazy/zakonczenie_baba_wazony.jpg" id="15_b0qwo"]

[sub_resource type="Gradient" id="Gradient_4g2bo"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4ouk5"]
gradient = SubResource("Gradient_4g2bo")
width = 40

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nlrv2")

[node name="HP_interface" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HP_Max" type="Control" parent="HP_interface"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HP1" type="TextureRect" parent="HP_interface"]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_ce1ua")

[node name="HP2" type="TextureRect" parent="HP_interface"]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_fq08q")

[node name="HP3" type="TextureRect" parent="HP_interface"]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_ae1f5")

[node name="HP4" type="TextureRect" parent="HP_interface"]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("5_bvfud")

[node name="HP5" type="TextureRect" parent="HP_interface"]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("6_xwhx4")

[node name="Throwables" type="Control" parent="."]
anchors_preset = 0
offset_left = 50.0
offset_top = 670.0
offset_right = 50.0
offset_bottom = 670.0

[node name="Spear" type="TextureRect" parent="Throwables"]
visible = false
layout_mode = 0
offset_right = 300.0
offset_bottom = 700.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_sbj7u")

[node name="Stone" type="TextureRect" parent="Throwables"]
layout_mode = 0
offset_left = 24.0
offset_top = 175.0
offset_right = 152.0
offset_bottom = 303.0
texture = ExtResource("11_srjus")

[node name="Copper" type="TextureRect" parent="Throwables"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 175.0
offset_right = 152.0
offset_bottom = 303.0
texture = ExtResource("10_avsow")

[node name="Bronze" type="TextureRect" parent="Throwables"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 175.0
offset_right = 152.0
offset_bottom = 303.0
texture = ExtResource("9_7ow6w")

[node name="BossHPBar" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 150.0

[node name="RichTextLabel" type="RichTextLabel" parent="BossHPBar"]
layout_mode = 0
offset_top = 24.0
offset_right = 1920.0
offset_bottom = 50.0
bbcode_enabled = true
text = "[center]Boss[/center]"

[node name="ColorRect" type="ColorRect" parent="BossHPBar"]
layout_mode = 0
offset_left = 610.0
offset_top = 67.0
offset_right = 1310.0
offset_bottom = 97.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="BossHPBar/ColorRect"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 695.0
offset_bottom = 25.0
color = Color(1, 0, 0, 1)

[node name="BossWarnings" type="Control" parent="."]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="WarningTimer" type="Timer" parent="BossWarnings"]
wait_time = 0.5

[node name="WarningTop" type="TextureRect" parent="BossWarnings"]
visible = false
layout_mode = 0
offset_left = 1920.0
offset_right = 1960.0
offset_bottom = 1920.0
rotation = 1.5708
texture = SubResource("GradientTexture1D_4ouk5")

[node name="WarningRight" type="TextureRect" parent="BossWarnings"]
visible = false
layout_mode = 0
offset_left = 1920.0
offset_top = 1080.0
offset_right = 1960.0
offset_bottom = 2160.0
rotation = 3.14159
texture = SubResource("GradientTexture1D_4ouk5")

[node name="WarningBottom" type="TextureRect" parent="BossWarnings"]
visible = false
layout_mode = 0
offset_top = 1080.0
offset_right = 40.0
offset_bottom = 3000.0
rotation = -1.5708
texture = SubResource("GradientTexture1D_4ouk5")

[node name="WarningLeft" type="TextureRect" parent="BossWarnings"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture1D_4ouk5")

[node name="DialogueInterface" type="Control" parent="."]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Poczatek" type="Sprite2D" parent="DialogueInterface"]
position = Vector2(958, 540)
scale = Vector2(0.935303, 0.998611)
texture = ExtResource("11_y1n2w")

[node name="Zakonczenia" type="Sprite2D" parent="DialogueInterface"]
visible = false
position = Vector2(957, 538)
scale = Vector2(0.93457, 0.996296)
texture = ExtResource("12_w76vi")

[node name="WejscieWKonar" type="Sprite2D" parent="DialogueInterface"]
visible = false
position = Vector2(959, 540)
scale = Vector2(0.936523, 1)
texture = ExtResource("13_5lofl")

[node name="ZakonczeniaWedrowiec" type="Sprite2D" parent="DialogueInterface"]
visible = false
position = Vector2(956, 544)
scale = Vector2(0.9375, 1.00556)
texture = ExtResource("14_062ri")

[node name="ZakonczenieBabaWazony" type="Sprite2D" parent="DialogueInterface"]
visible = false
position = Vector2(959, 537)
scale = Vector2(0.936523, 1.00185)
texture = ExtResource("15_b0qwo")

[node name="DynamicDiaogueBox" parent="DialogueInterface" instance=ExtResource("7_jmgqw")]
layout_mode = 1
anchor_right = 0.106
anchor_bottom = 0.225
offset_left = 1320.0
offset_top = 528.0
offset_right = 2178.48
offset_bottom = 682.0
grow_horizontal = 1
grow_vertical = 1

[node name="Narrator" parent="DialogueInterface" instance=ExtResource("7_jmgqw")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.106
anchor_bottom = 0.225
offset_left = 256.0
offset_top = 907.0
offset_right = 2666.48
offset_bottom = 987.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="timeout" from="BossWarnings/WarningTimer" to="." method="_on_warning_timer_timeout"]

[editable path="DialogueInterface/DynamicDiaogueBox"]
[editable path="DialogueInterface/Narrator"]
